# qwen-cookbook

./: README.md  pyproject.toml
examples/: api_basics.ipynb  function_calling.ipynb
