[project]
name = "qwen-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.21.0",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "qwen-agent[code-interpreter,gui,python-executor,rag]>=0.0.26",
]
